force-app/main/default/objects/MRC_History__c/MRC_History__c.object-meta.xml
<CustomObject>
    <label>MRC History</label>
    <nameField>
        <displayFormat>MRCH-{0000}</displayFormat>
        <label>MRC History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MRC Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>