force-app/main/default/objects/MRC_History__c/fields/Action_User__c.field-meta.xml
<CustomField>
    <fullName>Action_User__c</fullName>
    <formula>LastModifiedBy.LastName + if(LastModifiedBy.FirstName!=&apos;&apos;,&apos;, &apos; + LastModifiedBy.FirstName,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action User</label>
    <type>Text</type>
</CustomField>