force-app/main/default/objects/MRC_History__c/fields/Contract_No_XLS__c.field-meta.xml
<CustomField>
    <fullName>Contract_No_XLS__c</fullName>
    <label>Contract No XLS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>