force-app/main/default/objects/MRC_History__c/fields/Cust_SoldTo_Cr_Limit__c.field-meta.xml
<CustomField>
    <fullName>Cust_SoldTo_Cr_Limit__c</fullName>
    <label>Customer (Sold-To) Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>