force-app/main/default/objects/MRC_History__c/fields/Customer_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Term__c</fullName>
    <label>Customer Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>