force-app/main/default/objects/MRC_History__c/fields/Item_No_XLS__c.field-meta.xml
<CustomField>
    <fullName>Item_No_XLS__c</fullName>
    <label>Item No XLS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>