force-app/main/default/objects/MRC_History__c/fields/Last_Modified_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_DateTime__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Audit Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>