force-app/main/default/objects/MRC_History__c/fields/Load_Id__c.field-meta.xml
<CustomField>
    <fullName>Load_Id__c</fullName>
    <label>Load Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>