force-app/main/default/objects/MRC_History__c/fields/Material_No_XLS__c.field-meta.xml
<CustomField>
    <fullName>Material_No_XLS__c</fullName>
    <label>Material No XLS</label>
    <length>80</length>
    <type>Text</type>
</CustomField>