force-app/main/default/objects/MRC_History__c/fields/Mode_Of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Transport__c</fullName>
    <label>Mode Of Transport</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>