force-app/main/default/objects/MRC_History__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRC</label>
    <referenceTo>MRC__c</referenceTo>
    <relationshipLabel>MRC Histories</relationshipLabel>
    <relationshipName>MRC_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>