force-app/main/default/objects/MRC_History__c/fields/MRC_Grade_Sort__c.field-meta.xml
<CustomField>
    <fullName>MRC_Grade_Sort__c</fullName>
    <label>MRC Grade Sort</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>