force-app/main/default/objects/MRC_History__c/fields/MRC_Name__c.field-meta.xml
<CustomField>
    <fullName>MRC_Name__c</fullName>
    <label>MRC Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>