force-app/main/default/objects/MRC_History__c/fields/Online_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Online_Customer_Name__c</fullName>
    <label>Online Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>