force-app/main/default/objects/MRC_History__c/fields/Payment_Method_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Description__c</fullName>
    <label>Payment Method Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>