force-app/main/default/objects/MRC_History__c/fields/Plant_Description__c.field-meta.xml
<CustomField>
    <fullName>Plant_Description__c</fullName>
    <label>Plant Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>