force-app/main/default/objects/MRC_History__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>