force-app/main/default/objects/MRC_History__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Number</label>
    <referenceTo>Product_Catalogue__c</referenceTo>
    <relationshipLabel>MRC Histories</relationshipLabel>
    <relationshipName>MRC_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>