force-app/main/default/objects/MRC_History__c/fields/ProductLocationKey__c.field-meta.xml
<CustomField>
    <fullName>ProductLocationKey__c</fullName>
    <label>ProductLocationKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>