force-app/main/default/objects/MRC_History__c/fields/Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reasons__c</fullName>
    <label>Rejection Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>