force-app/main/default/objects/MRC_History__c/fields/Rv_Available_for_OLF_Changed__c.field-meta.xml
<CustomField>
    <fullName>Rv_Available_for_OLF_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for OLF Changed</label>
    <type>Checkbox</type>
</CustomField>