force-app/main/default/objects/MRC_History__c/fields/RV_Incoterms_Part2__c.field-meta.xml
<CustomField>
    <fullName>RV_Incoterms_Part2__c</fullName>
    <label>Incoterms Part2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>