force-app/main/default/objects/MRC_History__c/fields/RV_Invoicing_date__c.field-meta.xml
<CustomField>
    <fullName>RV_Invoicing_date__c</fullName>
    <label>Invoicing date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>