force-app/main/default/objects/MRC_History__c/fields/RV_Invoicing_dates_Description__c.field-meta.xml
<CustomField>
    <fullName>RV_Invoicing_dates_Description__c</fullName>
    <label>Invoicing dates Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>