force-app/main/default/objects/MRC_History__c/fields/Rv_OLF_Activated__c.field-meta.xml
<CustomField>
    <fullName>Rv_OLF_Activated__c</fullName>
    <formula>if(Rv_Available_for_OLF__c, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OLF Activated</label>
    <type>Text</type>
</CustomField>