force-app/main/default/objects/MRC_History__c/fields/RV_OLF_MRC_Only__c.field-meta.xml
<CustomField>
    <fullName>RV_OLF_MRC_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OLF MRC Only</label>
    <type>Checkbox</type>
</CustomField>