force-app/main/default/objects/MRC_History__c/fields/RV_Rejection_Code__c.field-meta.xml
<CustomField>
    <fullName>RV_Rejection_Code__c</fullName>
    <label>Rejection Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>