force-app/main/default/objects/MRC_History__c/fields/Sales_Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Doc_Type__c</fullName>
    <label>Sales Doc Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>