force-app/main/default/objects/MRC_History__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship-To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRC Histories (Ship-To Name)</relationshipLabel>
    <relationshipName>MRC_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>