force-app/main/default/objects/MRC_History__c/fields/Ship_to_County__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_County__c</fullName>
    <label>Ship-to County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>