force-app/main/default/objects/MRC_History__c/fields/Ship_to_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Number__c</fullName>
    <label>Ship-to Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>