force-app/main/default/objects/MRC_History__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold-To Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MRC Histories</relationshipLabel>
    <relationshipName>MRC_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>