force-app/main/default/objects/MRC_History__c/fields/Sold_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Number__c</fullName>
    <formula>Sold_To__r.Sold_To_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To Number</label>
    <type>Text</type>
</CustomField>