force-app/main/default/objects/MRC_History__c/fields/SoldToNumber__c.field-meta.xml
<CustomField>
    <fullName>SoldToNumber__c</fullName>
    <label>Sold-To-Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>